# qernel

./: .dockerignore  .editorconfig  .env.dev  .env.example  .env.test  .flake8  .gitignore  .lintstagedrc.mjs  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  dev-requirements.txt  package.json  pnpm-lock.yaml  prettier.config.ts  pyproject.toml  release.config.mjs  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.yml
.github/workflows/: pull_request_checks.yml  release.yml
api/: app.py  main.py
api/constants/: __init__.py  auth.py  builds.py
api/controllers/: __init__.py
api/dependencies/: __init__.py  database.py  github_oauth_controller.py
api/dtos/: __init__.py
api/enums/: __init__.py
api/errors/: __init__.py
api/models/: __init__.py
api/repositories/: __init__.py
api/routers/: __init__.py  agents.py  auth.py  builds.py  health.py  test_builds.py  users.py
api/schemas/: __init__.py
api/services/: __init__.py
api/utilities/: __init__.py
deployments/: compose.development.yml  compose.test.yml
migrations/: env.py
migrations/versions/: 245dd685db98_creates_builds_and_messages_tables.py  245dd685db98_creates_users_emails_github_users_builds_and_messages_tables.py  30fdca8cd90f_adds_users_emails_and_github_users_.py  f1766f333746_adds_users_and_github_users_tables.py
scripts/: _set_vars.sh  test_py_integration.sh  update-issue-template.ts  update-pyproject-version.ts
scripts/utilities/: index.ts  isSemanticBetaVersion.ts  isSemanticVersionValid.ts
test/integration/: conftest.py  test_auth_github_complete_route.py  (+2 more)
web/: components.json  i18n.config.ts  next.config.mjs  proxy.ts  store.ts
web/app/: globals.css  (+2 more)
(+313 files in other folders)
